src/test/deca/syntax/valid/custom/if_then_else/if_plus.deca
// Description:
//   If with a condition plus.
// Results:
//
//
// History:
//    created on 12/01/2022

{
   if (i + j == 1) {
        i = 4;
   } else {
        i = 0;
   }
}
